--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,15 @@
-language: yml
+language: java
+
+jdk:
+ - oraclejdk8
+ 
+install:
+ - mvn -N io.takari:maven:wrapper
+ 
+script: 
+ - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+ - mvn test
+
+branches:
+  only:
+    - master
