--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
   - KAFKA_PEERS=localhost:9092
 
 before_install:
-- wget http://apache.org/dist/kafka/1.0.0/kafka_2.11-1.0.0.tgz
+- wget http://apache.org/dist/kafka/1.0.0/kafka_2.11-1.0.0.tgz -O kafka.tgz		
 - mkdir -p kafka && tar xzf kafka.tgz -C kafka --strip-components 1
 - nohup bash -c "cd kafka && bin/zookeeper-server-start.sh config/zookeeper.properties &"
 - nohup bash -c "cd kafka && bin/kafka-server-start.sh config/server.properties &"
